UtahLiveDataTest/src/objects/ReviewGroup__c.object
<CustomObject>
    <description>[Business] This object summarizes number of Applications/Pre-Applications and number of Review Steps. As discussed with Shiva, Shah, Davinder , this object can not removed sometime later when possible.</description>
    <fields>
        <fullName>AdminPageLayout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admin Page Layout</label>
        <referenceTo>GNT__PageLayoutConfig__c</referenceTo>
        <relationshipLabel>Review Groups</relationshipLabel>
        <relationshipName>Review_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AnnouncementName__c</fullName>
        <formula>Announcement__r.AnnouncementName__c</formula>
        <label>Funding Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Announcement__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Funding Opportunity ID</label>
        <referenceTo>Announcement__c</referenceTo>
        <relationshipLabel>Review Groups</relationshipLabel>
        <relationshipName>Review_Groups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApplicationDeadline__c</fullName>
        <formula>Announcement__r.ApplicationDeadlineWithDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApplicationReviewStatus__c</fullName>
        <formula>TEXT(Announcement__r.ApplicationsReviewStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Review Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationsInFDM__c</fullName>
        <label>Applications in FDM</label>
        <summarizedField>ReviewStep__c.NumberOfApprovedApplications__c</summarizedField>
        <summaryFilterItems>
            <field>ReviewStep__c.Name</field>
            <operation>equals</operation>
            <value>Funding Decision Memo</value>
        </summaryFilterItems>
        <summaryForeignKey>ReviewStep__c.ReviewGroup__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ApplicationsInReview__c</fullName>
        <label>Applications in Review</label>
        <summarizedField>ReviewStep__c.NumberOfApplications__c</summarizedField>
        <summaryFilterItems>
            <field>ReviewStep__c.Name</field>
            <operation>equals</operation>
            <value>Pre-Screen Review</value>
        </summaryFilterItems>
        <summaryForeignKey>ReviewStep__c.ReviewGroup__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CurrentReviewStepFormula__c</fullName>
        <formula>HYPERLINK(&apos;/apex/ReviewStepView?id=&apos;+CurrentReviewStepId__c, CurrentReviewStep__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Review Step</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentReviewStepId__c</fullName>
        <label>Current Review Step Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentReviewStep__c</fullName>
        <label>Current Review Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingOpportunityID__c</fullName>
        <formula>Announcement__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsApplication__c</fullName>
        <formula>IF( RecordType.Name == &apos;Application&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This Field is to check if the record is for Application.</inlineHelpText>
        <label>Is Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPreApplication__c</fullName>
        <formula>IF( RecordType.Name == &apos;Pre-Application&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is to check if it is PreApplication.</inlineHelpText>
        <label>Is Pre-Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoofNonWinners__c</fullName>
        <label>No. of Non-Winners</label>
        <summarizedField>ReviewStep__c.NumberofNonWinners__c</summarizedField>
        <summaryForeignKey>ReviewStep__c.ReviewGroup__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NoofWinners__c</fullName>
        <label>No. of Winners</label>
        <summarizedField>ReviewStep__c.NumberofWinners__c</summarizedField>
        <summaryForeignKey>ReviewStep__c.ReviewGroup__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfApplications__c</fullName>
        <formula>IF((Announcement__r.OrganizationName__c == &apos;USBE&apos;), Announcement__r.NumberOfApplicationsInReview__c, Announcement__r.NumberOfApplications__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Applications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfNonWinners__c</fullName>
        <formula>NumberOfApplications__c -  NoofWinners__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Non-Winners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfPreApplications__c</fullName>
        <formula>Announcement__r.NumberOfPreApplications__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Pre-Applications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfReviewSteps__c</fullName>
        <defaultValue>4</defaultValue>
        <inlineHelpText>User defined - total number of review steps for an application or pre-application based on record type.</inlineHelpText>
        <label>Number of Review Steps Allowed</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProgramID__c</fullName>
        <formula>Announcement__r.Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Review Groups</relationshipLabel>
        <relationshipName>Review_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewStepsCreated__c</fullName>
        <label>Number of Review Steps Created</label>
        <summaryForeignKey>ReviewStep__c.ReviewGroup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Submit for Approve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Review Group</label>
    <listViews>
        <fullName>OGM_ReviewGroup</fullName>
        <filterScope>Queue</filterScope>
        <label>OGM</label>
        <queue>OGM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>RG-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Review Groups</pluralLabel>
    <recordTypes>
        <fullName>Application</fullName>
        <active>true</active>
        <label>Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Preapplication</fullName>
        <active>true</active>
        <label>Pre-Application</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>SharetoAnnouncementReviewerAndApprover__c</fullName>
        <label>Share to Announcement Reviewer and Appro</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharetoReviewers__c</fullName>
        <label>Share to Reviewers</label>
    </sharingReasons>
    <validationRules>
        <fullName>AllowedReviewSteps</fullName>
        <active>false</active>
        <description>Validates to make sure no more than allowed review steps ( defined by Number of Review Steps Allowed Field) are created under the same Review Group</description>
        <errorConditionFormula>IF(ReviewStepsCreated__c &gt;  NumberOfReviewSteps__c , TRUE, FALSE)</errorConditionFormula>
        <errorMessage>Review Steps exceed the total number of Review Steps allowed for this Group</errorMessage>
    </validationRules>
</CustomObject>